--- a/tlotliso/package.json
+++ b/tlotliso/package.json
@@ -14,7 +14,8 @@
     "daisyui": "^5.0.35",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "serve": "^14.2.4"
+    "serve": "^14.2.4",
+    "swiper": "^11.2.6"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
