--- a/server/backend/tsconfig.json
+++ b/server/backend/tsconfig.json
@@ -111,8 +111,6 @@
     "skipLibCheck": true                                 /* Skip type checking all .d.ts files. */
   },
   "files": [
-    "initialising",
-    "type",
-    "script"
-  ]
+    "src/index.ts"
+  ],
 }
